--- a/manifest.json
+++ b/manifest.json
@@ -2,5 +2,6 @@
     "name": "Social Links profile",
    "start_url": "/",
    "background_color": "#141414",
+   "Theme_color": "",
    "display": "minimal-ui"
   }
