--- a/package.json
+++ b/package.json
@@ -1,5 +1,12 @@
 {
+  "name": "social-links-profile",
+  "source": "/index.html",
+  "scripts": {
+    "build": "parcel build"
+  },
   "devDependencies": {
+    "@parcel/packager-raw-url": "^2.11.0",
+    "@parcel/transformer-webmanifest": "^2.11.0",
     "parcel": "^2.11.0"
   }
 }
