--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "social-links-profile",
   "source": "index.html",
   "scripts": {
-    "build": "parcel build index.html --public-url ./"
+    "build": "parcel build index.html --public-url ./",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
     "@parcel/packager-raw-url": "^2.11.0",
     "@parcel/transformer-webmanifest": "^2.11.0",
+    "gh-pages": "^6.1.1",
     "parcel": "^2.11.0"
   }
 }
