--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@parcel/packager-raw-url": "^2.11.0",
     "@parcel/transformer-webmanifest": "^2.11.0",
     "gh-pages": "^6.1.1",
-    "parcel": "^2.11.0"
+    "parcel": "^2.11.0",
+    "sharp": "^0.31.3"
   }
 }
